# ticket-availability-watcher

./: main.py  pyproject.toml  seen_reageer_links.json
.github/workflows/: watch.yml
migrations/: 0001_init.sql
src/email_confirmer/: contants.py  email_confirmer.py
src/ticket_watcher/: ticket_watcher.py  watcher.py
src/utils/: event_helpers.py  helpers.py  migrations.py
tests/: test_email_confirmer.py  test_ticket_watcher.py  test_watcher.py
