[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-availability-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "responses>=0.26.1",
    "ruff>=0.15.20",
]

[project.scripts]
ticket-watcher = "ticket_watcher.ticket_watcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_watcher"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]